2008-11-22  Moritz  <moritz@gnu.org>

	* simplelog.c (internal_log_write): Fallback to log level LOG_ERR
	in case the caller passes an invalid log level.
	* support.c: Added <limits.h>, thanks to Peter Lewis.

2008-08-07  Moritz  <moritz@gnu.org>

	* defs.h.in (POLDI_USERS_DB_FILE, POLDI_KEY_DIRECTORY): Removed
	definitions.

	* usersdb.c, usersdb.h: Removed files.

	* defs.h.in (POLDI_OLD_CARD_KEY_RETRIVAL_EXPLANATION): Removed
	definition.
	(POLDI_PIN2_QUERY_MSG): Likewise.
	(POLDI_PIN3_QUERY_MSG): Likewise.

2008-08-04  Moritz  <moritz@gnu.org>

	* support.c (file_to_string_internal, sexp_to_string): Use xfree()
	instead of free().

	* optparse.c, optparse.h: Removed.
	* simpleparse.c: Marked strings for i18n.

2008-08-03  Moritz  <moritz@gnu.org>

	* Makefile.am (poldi_util_SOURCES): Removed i18n.h.
	(i18n.h): Removed file.

	* simpleparse.c: Include support.h.
	* support.h (conversation_cb_t): Removed unused type.
	(enum conversation_type_t): Likewise.
	* simpleparse.c (my_strlen): Moved funtion ...
	* support.c (my_strlen): ... here.

2008-07-29  Moritz  <moritz@gnu.org>

	* simpleparse.h: New type: simpleparse_i18n_cb_t.
	Declare new function simpleparse_set_i18n_cb.
	* simpleparse.c (simpleparse_set_i18n_cb): New function.
	(translate): New function.
	Added calls to function translate() throughout the code for i18n.

2008-07-20  Moritz  <moritz@gnu.org>

	* sexputil, sexp-parse.h: Removed files.
	* Makefile.am: dito.

2008-07-20  Moritz  <moritz@gnu.org>

	* Makefile.am (poldi_util_SOURCES): added util-local.h,
	simplelog.c, simplelog.h, simpleparse.c, simpleparse.h,
	filenames.c, filenames.h.
	* util.h: Stripped: removed jnlib includes, unused GCC macros,
	memory manager definitions, unused function declarations.
	* convert.c: Removed unused functions.
	* support.c: Removed jnlib includes, include poldi.h.
	* util-local.h: New file.
	* membuf.c, membuf.c: Remerged from GnuPG.
	* membuf.c: Include util-local.h, not config.h.